update actions code. (4)

--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,9 +1,12 @@
 name: Hello
-on: push
+on: [push, pull_request]
 jobs:
   hello:
-    name: 'Hello, World!'
+    name: 'First Action!'
     runs-on: ubuntu-latest
     steps:
-      - run: echo "hello, world!"
+      - run: |
+          ls
+          pwd
+          echo "hello, world!"
       - uses: actions/checkout@v4
