--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   hello:
     name: 'First Action!'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - run: |
           date
