--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Ruby 2.6
-      uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.3
         bundler-cache: true
