update actions code. (3)

--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -21,6 +21,7 @@ jobs:
           ls
           pwd
           echo "hello, world! ${{inputs.greeting}}"
-      - name: 'second'
+      - name: "context"
         run: |
           echo "{{ github.actor }}"
+          echo "{{ env }}"
