--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -1,28 +1,28 @@
-# name: Ruby Gem
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
-# jobs:
-#   build:
-#     name: Build + Publish
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: read
-#       packages: write
-#     steps:
-#     - uses: actions/checkout@v4
-#     - name: Set up Ruby
-#       uses: ruby/setup-ruby@v1
-#       with:
-#         ruby-version: 3.3.4
-#         bundler-cache: true
-#     - name: Publish to GPR
-#       run: |
-#         date
-#         pwd
-#         ls
-#         docker compose run ror rails about
-#     - name: 'abc'
-#       - run: echo "${{github.actor}} ?"
+ name: Ruby Gem
+ on:
+   push:
+     branches: [ "main" ]
+   pull_request:
+     branches: [ "main" ]
+ jobs:
+   build:
+     name: Build + Publish
+     runs-on: ubuntu-latest
+     permissions:
+       contents: read
+       packages: write
+     steps:
+     - uses: actions/checkout@v4
+     - name: Set up Ruby
+       uses: ruby/setup-ruby@v1
+       with:
+         ruby-version: 3.3.4
+         bundler-cache: true
+     - name: Publish to GPR
+       run: |
+         date
+         pwd
+         ls
+         docker compose run ror rails about
+     - name: nextage
+       - run: ls
