--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -7,7 +7,8 @@
  jobs:
    build:
      name: Build + Publish
-     runs-on: ubuntu-latest
+     runs-on: ubuntu-24.4
+     timeout-minutes: 5
      permissions:
        contents: read
        packages: write
@@ -26,3 +27,5 @@
          docker compose run ror rails about
      - name: nextage
        - run: ls
+#      - name: Setup tmate session
+#        uses: mxschmitt/action-tmate@v3
