--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -26,6 +26,6 @@
          ls
          docker compose run ror rails about
      - name: nextage
-       - run: ls
-#      - name: Setup tmate session
-#        uses: mxschmitt/action-tmate@v3
+       - run: echo "${{ github.actor }} ..."
+     # - name: Setup tmate session
+     #   uses: mxschmitt/action-tmate@v3
