Learning GitHub Actions today. (5)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -28,5 +28,6 @@
          echo "${{ github.actor }} ..."
          echo "${{ github.actoin_path }} ..."
          echo "${{ github.actoin_repository }} ..."
+         echo "${{ runner.name }} ... ${{ runner.os }} ... ${{runner.arch}} ${{ runner.too_cache }}"
      # - name: Setup tmate session
      #   uses: mxschmitt/action-tmate@v3
