Learning GitHub Actions today. (7)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -9,6 +9,8 @@
      name: Build + Publish
      runs-on: ubuntu-24.04
      timeout-minutes: 5
+     env:
+       BRANCH: main
      permissions:
        contents: read
        packages: write
