Learning GitHub Actions today. (8)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -25,6 +25,9 @@
        run: |
          date
          pwd
+     - name: two
+       run: |
+         echo ${{ BRANCH }}
      - name: nex
        run: |
          echo "${{ github.actor }} ..."
