Learning GitHub Actions today. (11)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -27,7 +27,7 @@ jobs:
           pwd
       - name: two
         run: |
-          echo "${{ BRANCH }}"
+          echo "${ BRANCH }"
       - name: nex
         run: |
           echo "${{ github.actor }} ..."
