--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -4,6 +4,8 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+env:
+  BRANCH: major
 jobs:
   build:
     name: Build + Publish
