Learning GitHub Actions today. (15)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -28,8 +28,10 @@ jobs:
           date
           pwd
       - name: two
+        env:
+          EXAMPE: example
         run: |
-          echo "${BRANCH}"
+          echo "${BRANCH} ${EXAMPLE}"
       - name: nex
         run: |
           echo "${{ github.actor }} ..."
