Learning GitHub Actions today. (16)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -32,6 +32,7 @@ jobs:
           EXAMPE: example
         run: |
           echo "${BRANCH} ${EXAMPLE}"
+          echo "${CI}
       - name: nex
         run: |
           echo "${{ github.actor }} ..."
