Learning GitHub Actions today. (18)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -32,7 +32,7 @@ jobs:
           EXAMPLE: example
         run: |
           echo "${BRANCH} ... ${EXAMPLE}"
-          echo "${CI}
+          echo "${CI}"
       - name: nex
         run: |
           echo "${{ github.actor }} ..."
