Learning GitHub Actions today. (20)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -35,6 +35,7 @@ jobs:
           echo "${BRANCH} ... ${EXAMPLE}"
           echo "${CI}"
           echo "${ACTOR}"
+          echo "${{ vars.USERNAME }}"
       - name: nex
         run: |
           echo "${{ github.actor }} ..."
