Learning GitHub Actions today. (25)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -38,8 +38,7 @@ jobs:
           echo "${{ vars.USERNAME }} "
           echo "${{ secrets.PASSWORD }} <> ${{ secrets.PASSWORD#? }} "
       - name: three
-        env:
-          LITERAL_NULL:${{ null}}
+        env: LITERAL_NULL:${{ null}}
         run: |
           printenv | grep 'LITERAL_'
       - name: nex
