Learning GitHub Actions today. (26)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -32,13 +32,14 @@ jobs:
           EXAMPLE: example
           ACTOR: ${{ github.actor }}
         run: |
-          echo "${BRANCH} ... ${EXAMPLE} "
-          echo "${CI} "
-          echo "${ACTOR} "
-          echo "${{ vars.USERNAME }} "
-          echo "${{ secrets.PASSWORD }} <> ${{ secrets.PASSWORD#? }} "
+          echo "${BRANCH} ... ${EXAMPLE}"
+          echo "${CI}"
+          echo "${ACTOR}"
+          echo "${{ vars.USERNAME }}"
+          echo "${{ secrets.PASSWORD }}"
       - name: three
-        env: LITERAL_NULL:${{ null}}
+        env:
+          LITERAL_NULL: ${{ null}}
         run: |
           printenv | grep 'LITERAL_'
       - name: nex
