Learning GitHub Actions today. (28)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -45,6 +45,7 @@ jobs:
           LITERAL_STRING: world
         run: |
           printenv | grep 'LITERAL_'
+          echo "${{ !true }}"
       - name: nex
         run: |
           echo "${{ github.actor }} ..."
