Learning GitHub Actions today. (29)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -46,6 +46,9 @@ jobs:
         run: |
           printenv | grep 'LITERAL_'
           echo "${{ !true }}"
+          echo "${{ 10 =< 20 }}"
+          echo "${{ 10 == 20 }}"
+          echo "${{ 10 != 20 }}"
       - name: nex
         run: |
           echo "${{ github.actor }} ..."
