Learning GitHub Actions today. (30)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -46,7 +46,7 @@ jobs:
         run: |
           printenv | grep 'LITERAL_'
           echo "${{ !true }}"
-          echo "${{ 10 =< 20 }}"
+          echo "${{ 10 <= 20 }}"
           echo "${{ 10 == 20 }}"
           echo "${{ 10 != 20 }}"
       - name: nex
