--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -25,8 +25,7 @@ jobs:
           bundler-cache: true
       - name: Publish to GPR
         run: |
-          date
-          pwd
+          bundle install
       - name: two
         env:
           EXAMPLE: example
