Learning GitHub Actions today. (2)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -23,9 +23,10 @@ jobs:
         with:
           ruby-version: 3.3.4
           bundler-cache: true
-      - name: Publish to GPR
-        run: |
-          bundle install
+      - name: Create Env
+        run: bundle install
+      - name: Create Env
+        run: bin/rails test
       - name: two
         env:
           EXAMPLE: example
