Learning GitHub Actions today. (3)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -21,11 +21,10 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.3.4
           bundler-cache: true
       - name: Create Env
         run: bundle install
-      - name: Create Env
+      - name: Do Test
         run: bin/rails test
       - name: two
         env:
