--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -24,8 +24,8 @@ jobs:
           bundler-cache: true
       - name: Create Env
         run: bundle install
-      - name: Do Test
-        run: bin/rails test
+#      - name: Do Test
+#        run: bin/rails test
       - name: two
         env:
           EXAMPLE: example
