--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -64,6 +64,8 @@ jobs:
       - name: six
         env:
           CONTAINS_FUNC: ${{ contains('Hello','ell') }}
+          START_WITH_FUNC: ${{ startWith('Hello','He') }}
+          END_WITH_FUNC: ${{ endsWith('Hello','lo') }}
         run: printenv | grep '_FUNC'
     # - name: Setup tmate session
     #   uses: mxschmitt/action-tmate@v3
