--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -67,6 +67,7 @@ jobs:
           START_WITH_FUNC: ${{ startsWith('Hello','He') }}
           END_WITH_FUNC: ${{ endsWith('Hello','lo') }}
           FORMAT_FUNC: ${{ format('{0}, {1}!', 'Hello', 'World') }}
+          JOIN_FUNC: ${{ join(github.event.*.html_url, ',') }}
         run: printenv | grep '_FUNC'
     # - name: Setup tmate session
     #   uses: mxschmitt/action-tmate@v3
