Learning GitHub Actions today. (13)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -68,8 +68,8 @@ jobs:
           END_WITH_FUNC: ${{ endsWith('Hello','lo') }}
           FORMAT_FUNC: ${{ format('{0}, {1}!', 'Hello', 'World') }}
           JOIN_FUNC: ${{ join(github.event.*.html_url, ',') }}
-        run: |
-          printenv | grep '_FUNC'
-          echo ${{ toJSON(github) }}
+        run: printenv | grep '_FUNC'
+      - name: Se7en
+        run: echo ${{ toJSON(github) }}
     # - name: Setup tmate session
     #   uses: mxschmitt/action-tmate@v3
