--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -73,5 +73,8 @@ jobs:
         env:
           HASH: ${{ hashFiles('githb/workflows/*.yaml') }}
         run: echo $HASH
+      - name: Eight
+        if: ${{ contains(github.run.id, '1') }}
+        run: echo $HASH
     # - name: Setup tmate session
     #   uses: mxschmitt/action-tmate@v3
