Learning GitHub Actions today. (19)

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -1,5 +1,5 @@
 name: Ruby on Rails at GitHub Actions
-run-name: Run by @${{ github.actior }}
+run-name: Run by @${{ github.actor }}
 on:
   push:
     branches: ["main"]
