modify fixtures to pass my tests

--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,7 +1,8 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: staff
-
+  id: '019194e5-ce29-73a7-a6a4-b43659c55f82'
+  type: 'Staff'
 two:
-  type: user
+  id: '019194ec-8a27-7dce-ad27-938f22854398'
+  type: 'User'
