--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,9 +3,8 @@
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
+
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  id: "019194f0-46f0-7fe3-9459-fce2c71bb3ca"
+  type: 'User'
