--- a/.dockerignore
+++ b/.dockerignore
@@ -24,7 +24,7 @@
 /tmp/pids/*
 !/tmp/pids/.keep
 
-# Ignore storage (uploaded files in development and any SQLite databases).
+# Ignore storage (uploaded files sign_in development and any SQLite databases).
 /storage/*
 !/storage/.keep
 /tmp/storage/*
