--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -3,7 +3,7 @@
 # on 2024-08-05 16:37:56 UTC using RuboCop version 1.65.1.
 # The point is for the user to remove these configuration records
 # one by one as the offenses are removed from the code base.
-# Note that changes in the inspected code, or installation of new
+# Note that changes sign_in the inspected code, or installation of new
 # versions of RuboCop, may require this file to be generated again.
 
 # Offense count: 1
