[checkpoint] take a rest...

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ POSTGRES_URI='db-postgresql'
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
 RAILS_URI='http://localhost:3333'
+RAILS_USER_URL='localhost:3000'
+RAILS_STAFF_URL='lvh.me:3000'
 REMIX_URI='http://localhost:5173'
 REDIS_CACHE_URL='redis://redis:6379'
 REDIS_SESSION_URL='redis://valkey:6379'
