[Checkpoint] now fixing fixtures...

--- a/test/fixtures/emails.yml
+++ b/test/fixtures/emails.yml
@@ -1,10 +1,10 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-staff:
+staff_emails_one:
   id: '019194e5-ce29-73a7-a6a4-b43659c55f82'
   type: 'Staff'
   address: 'staff@gmail.com'
-user:
+user_emails_one:
   id: '019194ec-8a27-7dce-ad27-938f22854398'
   type: 'User'
   address: 'user@gmail.com'
