--- a/test/fixtures/staff_emails.yml
+++ b/test/fixtures/staff_emails.yml
@@ -5,7 +5,7 @@
 # below each fixture, per the syntax sign_in the comments below
 
 #
-one:
+staff_emails_two:
   id: '019194f0-9e71-7e17-8343-651f98df0105'
   type: 'Staff'
-  address: 'one@gmail.com'
+  address: 'onetwostaff@example.com'
