--- a/test/fixtures/user_emails.yml
+++ b/test/fixtures/user_emails.yml
@@ -5,7 +5,11 @@
 # below each fixture, per the syntax sign_in the comments below
 
 #
-one:
+user_emails_two:
   id: "019194f0-46f0-7fe3-9459-fce2c71bb3ca"
   type: 'User'
-  address: 'two@gmail.com'
+  address: 'two_user@gmail.com'
+staff_emails_two:
+  id: "019194f0-46f0-7fe3-9459-fce2c71ba3ca"
+  type: 'Staff'
+  address: 'two_staff@gmail.com'
