--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ POSTGRES_PASSWORD=password
 RAILS_URI='http://localhost:3333'
 RAILS_USER_URL='localhost'
 RAILS_STAFF_URL='localhost.localdomain'
-REMIX_URI='http://localhost:5173'
+REMIX_URL='http://localhost:4000'
 REDIS_CACHE_URL='redis://redis:6379'
 REDIS_SESSION_URL='redis://valkey:6379'
 SELENIUM_URL='http://selenium:4444'
