--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -28,15 +28,15 @@ jobs:
         run: |
           gem install bundler
           bundle install
-#      - name: Run RuboCop
-#        run: |
-#          bundle exec rubocop --format simple
+     - name: Run RuboCop
+       run: |
+         bundle exec rubocop --format simple
       - name: Install bundler-audit
         run: gem install bundler-audit
       - name: Bundler Audit
         run: bundle audit check --update
-#      - name: Do Test
-#        run: bin/rails test
+      - name: Do Test
+        run: bin/rails test
       - name: two
         env:
           EXAMPLE: example
