--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ruby
 {
-  "name": "learn",
-  "dockerComposeFile": "compose.yaml",
-  "service": "rails-app",
+  "name": "Demo-App-RoR",
+  "dockerComposeFile": "./compose.yaml",
+  "service": "ror",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 
   // Features to add to the dev container. More info: https://containers.dev/features.
