--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "ror-bun",
-  "module": "index.ts",
+  "name": "umaxica",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "version": "1.0.0",
-  "description": "[![Hello](https://github.com/seahal/demo-application-ror/actions/workflows/example.yaml/badge.svg)](https://github.com/seahal/demo-application-ror/actions/workflows/example.yaml) # README",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
+  "scripts": {
+    "dev": "vite",
+    "build": "bun bun.config.js",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "bun-types": "^1.1.26",
-    "typescript": "^5.5.4",
-    "undici-types": "^5.26.5"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "bun bun.config.js"
-  },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.3"
+  }
 }
