--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ ENV HOME=/ror
 RUN mkdir /ror
 WORKDIR /ror
 RUN apt-get update -qq && \
-    apt-get install -y build-essential postgresql-client libpq-dev graphviz curl git gcc && \
+    apt-get install -y build-essential postgresql-client libpq-dev graphviz curl git libglib2.0-dev && \
     apt-get clean
 
 
