--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "app",
   "private": true,
   "scripts": {
-    "build": "bun bun.config.js"
+    "build": "bun bun.config.js",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.45",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.10"
   }
 }
