--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,7 +7,8 @@ RUN mkdir /ror
 WORKDIR /ror
 RUN apt-get update -qq && \
     apt-get install -y build-essential postgresql-client libpq-dev graphviz curl git libglib2.0-dev && \
-    apt-get clean
+    apt-get clean && \
+    curl -fsSL https://bun.sh/install | bash
 
 
 #FROM ruby:$RUBY_VERSION-bookworm AS production
