--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # For Docker ENV
 PORT=3000
-POSTGRES_URI='db-postgresql'
+POSTGRES_URI='db-psql-w'
+POSTGRES_WRITER_URL='db-psql-w'
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
-RAILS_URI='http://localhost:3333'
 RAILS_USER_URL='localhost'
 RAILS_STAFF_URL='localhost.localdomain'
 REMIX_URL='http://localhost:4000'
