--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "bun bun.config.js",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    "build:css": "tailwindcss -i app/assets/stylesheets/tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
