--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # For Docker ENV
 PORT=3000
-POSTGRES_URI='db-psql-w'
-POSTGRES_WRITER_URL='db-psql-w'
+POSTGRES_URI='localhost'
+POSTGRES_WRITER_URL='localhost'
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
 RAILS_USER_URL='localhost'
