--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-# For Docker ENV
-PORT=4000
-POSTGRES_URI='localhost'
-POSTGRES_WRITER_URL='localhost'
+PORT=3000
+POSTGRES_URI='db-psql-w'
+POSTGRES_WRITER_URL='db-psql-w'
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
 RAILS_USER_URL='localhost'
