--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  host: <%= ENV["POSTGRES_URI"] %>
+  host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRES_URI"] : 'localhost' %> # for Docker user's url is not same to bare env
   username: <%= ENV["POSTGRES_USER"] %>
   password: <%= ENV["POSTGRES_PASSWORD"] %>
 
@@ -23,6 +23,9 @@ development:
 test:
   <<: *default
   database: test_db
+  host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRES_URI"] : 'localhost' %>
+  username: <%= ENV["POSTGRES_USER"] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 production:
   <<: *default
