--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ POSTGRES_URI='db-psql-w'
 POSTGRES_WRITER_URL='db-psql-w'
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
-RAILS_USER_URL='localhost'
-RAILS_STAFF_URL='localhost.localdomain'
+RAILS_USER_URL='localhost4.localdomain'
+RAILS_STAFF_URL='localhost6.localdomain'
 REMIX_URL='http://localhost:4000'
 REDIS_CACHE_URL='redis://redis:6379'
 REDIS_SESSION_URL='redis://valkey:6379'
