[BAD] i added some features without test.

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3000
-POSTGRES_URI='db-psql-w'
-POSTGRES_WRITER_URL='db-psql-w'
+POSTGRES_URI='db-psql-writer'
+POSTGRES_READER_URL='db-psql-writer'
+POSTGRES_WRITER_URL='db-psql-reader'
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
 RAILS_USER_URL='localhost4.localdomain'
