--- a/config/database.yml
+++ b/config/database.yml
@@ -14,19 +14,52 @@ default: &default
   password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 development:
-  <<: *default
-  database: dev_db
+  auth:
+    <<: *default
+    database: dev_auth_db
+  auth_replica:
+    <<: *default
+    replica: true
+    database: dev_auth_db
+  core:
+    <<: *default
+    database: dev_core_db
+  core_replica:
+    <<: *default
+    replica: true
+    database: dev_core_db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: test_db
-  host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRES_URI"] : 'localhost' %>
-  username: <%= ENV["POSTGRES_USER"] %>
-  password: <%= ENV["POSTGRES_PASSWORD"] %>
+  auth:
+    <<: *default
+    database: test_auth_db
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRES_URI"] : 'localhost' %>
+    username: <%= ENV["POSTGRES_USER"] %>
+    password: <%= ENV["POSTGRES_PASSWORD"] %>
+  auth_replica:
+    <<: *default
+    database: test_auth_db
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRES_URI"] : 'localhost' %>
+    username: <%= ENV["POSTGRES_USER"] %>
+    password: <%= ENV["POSTGRES_PASSWORD"] %>
+  core:
+    <<: *default
+    database: test_core_db
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRES_URI"] : 'localhost' %>
+    username: <%= ENV["POSTGRES_USER"] %>
+    password: <%= ENV["POSTGRES_PASSWORD"] %>
+    database: test_core_db
+  core_replica:
+    <<: *default
+    database: test_core_db
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRES_URI"] : 'localhost' %>
+    username: <%= ENV["POSTGRES_USER"] %>
+    password: <%= ENV["POSTGRES_PASSWORD"] %>
 
+# FIXME: please implement below
 production:
   <<: *default
   database: production_db
