--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PORT=3000
-POSTGRES_URI='db-psql-writer'
-POSTGRES_READER_URL='db-psql-writer'
-POSTGRES_WRITER_URL='db-psql-reader'
+PSQL_AUTH_PUB='psql-auth-pub'
+PSQL_AUTH_SUB='psql-auth-sub'
+PSQL_CORE_PUB='psql-core-pub'
+PSQL_CORE_SUB='psql-core-sub'
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
 RAILS_USER_URL='localhost4.localdomain'
