[SYSTEM] updated redis/valkey settings.

--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ PSQL_AUTH_PUB='psql-auth-pub'
 PSQL_AUTH_SUB='psql-auth-sub'
 PSQL_CORE_PUB='psql-core-pub'
 PSQL_CORE_SUB='psql-core-sub'
+VALKEY_CACHE_URL='redis://vk-session:6379'
+VALKEY_SESSION_URL='redis://vk-cache:6379'
+REMIX_URL='http://localhost:4000'
+SELENIUM_URL='http://selenium:4444'
 RAILS_USER_URL='localhost4.localdomain'
 RAILS_STAFF_URL='localhost6.localdomain'
-REMIX_URL='http://localhost:4000'
-REDIS_CACHE_URL='redis://redis:6379'
-REDIS_SESSION_URL='redis://valkey:6379'
-SELENIUM_URL='http://selenium:4444'
