--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT=3000
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
-PSQL_AUTH_PUB='psql-auth-pub'
-PSQL_AUTH_SUB='psql-auth-sub'
-PSQL_CORE_PUB='psql-core-pub'
-PSQL_CORE_SUB='psql-core-sub'
+POSTGRESQL_AUTH_PUB='psql-auth-pub'
+POSTGRESQL_AUTH_SUB='psql-auth-sub'
+POSTGRESQL_CORE_PUB='psql-core-pub'
+POSTGRESQL_CORE_SUB='psql-core-sub'
 VALKEY_CACHE_URL='redis://vk-session:6379'
 VALKEY_SESSION_URL='redis://vk-cache:6379'
 REMIX_URL='http://localhost:4000'
