I added localdomain to use subdomain at browsers.

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ POSTGRESQL_AUTH_PUB='psql-auth-pub'
 POSTGRESQL_AUTH_SUB='psql-auth-sub'
 POSTGRESQL_CORE_PUB='psql-core-pub'
 POSTGRESQL_CORE_SUB='psql-core-sub'
-VALKEY_CACHE_URL='redis://vk-session:6379'
-VALKEY_SESSION_URL='redis://vk-cache:6379'
+VALKEY_CACHE_URL='redis://vk-cache:6379'
+VALKEY_SESSION_URL='redis://vk-session:6379'
 REMIX_URL='http://localhost:4000'
 SELENIUM_URL='http://selenium:4444'
 RAILS_USER_URL='localhost4.localdomain'
