[SYSTEM] added hotwire.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "typescript": "^5.0.0"
   },
   "module": "index.ts",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  }
 }
-
