--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ POSTGRESQL_CORE_PUB='psql-core-pub'
 POSTGRESQL_CORE_SUB='psql-core-sub'
 VALKEY_CACHE_URL='redis://vk-cache:6379'
 VALKEY_SESSION_URL='redis://vk-session:6379'
-REMIX_URL='http://localhost:4000'
+EDGE_URL='http://localhost:4333'
 SELENIUM_URL='http://selenium:4444'
 RAILS_USER_URL='localhost4.localdomain'
 RAILS_STAFF_URL='localhost6.localdomain'
