--- a/test/fixtures/staffs.yml
+++ b/test/fixtures/staffs.yml
@@ -1,4 +1,4 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# users_one:
-#   id: "e6c146b6-e4f5-4056-888c-338a16ab82ce"
+staffs_one:
+  id: "e6c146b6-e4f5-4056-888c-338a16ab81ce"
