[CHECK POINT] I wrote some codes today!

--- a/.env
+++ b/.env
@@ -9,5 +9,6 @@ VALKEY_CACHE_URL='redis://vk-cache:6379'
 VALKEY_SESSION_URL='redis://vk-session:6379'
 EDGE_URL='http://localhost:4333'
 SELENIUM_URL='http://selenium:4444'
-RAILS_USER_URL='localhost4.localdomain'
-RAILS_STAFF_URL='localhost6.localdomain'
+API_CORPORATE_URL='localhost.localdomain'
+API_SERVICE_URL='localhost4.localdomain'
+API_STAFF_URL='localhost6.localdomain'
