[Check Point] take a rest

--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@ POSTGRESQL_CORE_SUB='psql-core-sub'
 VALKEY_CACHE_URL='redis://vk-cache:6379'
 VALKEY_SESSION_URL='redis://vk-session:6379'
 EDGE_URL='http://localhost:4333'
-SELENIUM_URL='http://selenium:4444'
+SELENIUM_HOST='chromium'
+SELENIUM_REMOTE_URL='chromium:4444/wd/hub'
 API_CORPORATE_URL='localhost.localdomain'
 API_SERVICE_URL='localhost4.localdomain'
 API_STAFF_URL='localhost6.localdomain'
